--- a/Task1/style.css
+++ b/Task1/style.css
@@ -33,7 +33,7 @@ nav ul li a {
 
 
 .hero {
-    background: url('https://via.placeholder.com/1200x400') no-repeat center center/cover;
+    background: url('8011470.jpg') no-repeat center center/cover;
     height: 400px;
     display: flex;
     flex-direction: column;
